# windns

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dioxus.toml  LICENSE  README.md  build.rs  clippy.toml  lefthook.yml  renovate.json  windns.manifest  windns.rc
.github/workflows/: ci.yml  release.yml  renovate.yml
assets/: main.css
src/: app.rs  main.rs  state.rs
src/components/: action_buttons.rs  delete_confirm_dialog.rs  dns_input.rs  dns_mode_selector.rs  dns_tabs.rs  header.rs  mod.rs  network_selector.rs  profile_selector.rs  status_bar.rs
src/dns/: commands.rs  config.rs  mod.rs  network.rs  types.rs  validation.rs  window.rs
