[package]
name = "windns"
version = "0.3.2"
edition = "2024"
build = "build.rs"

[dependencies]
dioxus = { version = "0.7.2", features = ["desktop"] }
dioxus-free-icons = { version = "0.10.0", features = [
    "material-design-icons-action",
    "material-design-icons-device",
    "material-design-icons-navigation"
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
json_comments = "0.2.2"
dirs = "6.0.0"
tokio = { version = "1.48.0", features = ["process", "rt-multi-thread"] }
thiserror = "2.0.17"
uuid = { version = "1", features = ["v4"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.6"

[dev-dependencies]
tempfile = "3"
